# baklava-or-not-baklava

./: .gitignore  Model file.ipynb  README.md  Resources.md
baklava-recognition-service/: README.md  app.py  pyproject.toml
data/scraper/: unsplash.sh
data/unsplash/: README.md  __init__.py  pyproject.toml
web-app/: index.html  package-lock.json  package.json
web-app/mock-api/: server.js
web-app/src/: App.svelte  stores.js
web-app/src/lib/: Header.svelte  Instruction.svelte  Photo.svelte
