[tool.poetry]
name = "baklava-recognition-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Flask = "^2.2.2"
Flask-API = "^3.0.post1"
python-dotenv = "^0.20.0"
tensorflow = "^2.9.2"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
